--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be9564">  <td>21/08/06 21:48:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.visualstory.testcases.TC_LoginTest_001@6283d8b8]">loginTest</td> 
-  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>21/08/06 21:48:52</td>   <td>-5930</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.visualstory.testcases.TC_LoginTest_001@6283d8b8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
-<tr bgcolor="c971a1">  <td>21/08/06 21:49:10</td>   <td>11955</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.visualstory.testcases.TC_LoginTest_001@6283d8b8]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1963862935</td>   <td></td> </tr>
+<tr bgcolor="9cabe1">  <td>21/08/14 19:51:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LogoutTest_001.run()[pri:0, instance:com.visualstory.testcases.TC_LogoutTest_001@a530d0a]">run</td> 
+  <td>main@651802632</td>   <td></td> </tr>
+<tr bgcolor="7e99d8">  <td>21/08/14 19:51:07</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.visualstory.testcases.TC_LogoutTest_001@a530d0a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
 </table>
